WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64571
ARMv7 backend broken, lacks 3 parameter rshift32 method
https://bugs.webkit.org/show_bug.cgi?id=64571
Summary
ARMv7 backend broken, lacks 3 parameter rshift32 method
Xan Lopez
Reported
2011-07-14 16:13:14 PDT
Summary says it all.
Attachments
Patch
(1.50 KB, patch)
2011-07-14 16:15 PDT
,
Xan Lopez
no flags
Details
Formatted Diff
Diff
Patch
(15.68 KB, patch)
2011-07-14 16:17 PDT
,
Xan Lopez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2011-07-14 16:15:59 PDT
Created
attachment 100885
[details]
Patch
Xan Lopez
Comment 2
2011-07-14 16:17:51 PDT
Created
attachment 100887
[details]
Patch
Zoltan Herczeg
Comment 3
2011-07-18 23:19:10 PDT
Comment on
attachment 100885
[details]
Patch LGTM. On x86-32, all three shifts have 3 operand opcode, might be a good idea to add them later. But this patch is basically a build-fix, and should be landed.
Xan Lopez
Comment 4
2011-07-19 11:34:01 PDT
Comment on
attachment 100885
[details]
Patch Clearing flags on attachment: 100885 Committed
r91275
: <
http://trac.webkit.org/changeset/91275
>
Xan Lopez
Comment 5
2011-07-19 11:34:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug