ARMv7 backend broken, lacks 3 parameter rshift32 method https://bugs.webkit.org/show_bug.cgi?id=64571

Reviewed by Zoltan Herczeg.

* assembler/MacroAssemblerARMv7.h:
(JSC::MacroAssemblerARMv7::rshift32): add missing rshift32 method.

Canonical link: https://commits.webkit.org/80521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91275 268f45cc-cd09-0410-ab3c-d52691b4dbfc