Source/JavaScriptCore/assembler/MacroAssemblerARMv7.h
@@ -296,7 +296,12 @@ public:
 
     void rshift32(TrustedImm32 imm, RegisterID dest)
     {
-        m_assembler.asr(dest, dest, imm.m_value & 0x1f);
+        rshift32(dest, imm, dest);
+    }
+
+    void rshift32(RegisterID src, TrustedImm32 imm, RegisterID dest)
+    {
+        m_assembler.asr(dest, src, imm.m_value & 0x1f);
     }
     
     void urshift32(RegisterID shift_amount, RegisterID dest)
